--- a/project/nights/templates/nights/includes/chart_month_periodicity.html
+++ b/project/nights/templates/nights/includes/chart_month_periodicity.html
@@ -8,7 +8,7 @@
     </div>
     {% if forloop.counter|divisibleby:3 %}
     </div> <!-- row end loop -->
-    <div class="row mt-3">
+    <div class="row mt-3 mx-2">
     <!-- row start loop -->
     {% endif %}
     {% endwith %}
