--- a/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
@@ -65,7 +65,8 @@
         },
         series: [{
             name: 'Kiekis',
-            color: 'rgba(166,193,110,0.8)',
+            color: 'rgba(70, 171, 157,0.65)',
+            borderColor: 'rgba(70, 171, 157, 1)',
             data: {{ data|safe }},
             pointPadding: 0,
             pointPlacement: 0,
