--- a/project/nights/templates/nights/includes/reload_stats.html
+++ b/project/nights/templates/nights/includes/reload_stats.html
@@ -2,3 +2,4 @@
 <div id="chart_weekdays">{{ chart_weekdays }}</div>
 <div id="chart_months">{{ chart_months }}</div>
 <div id="chart_year">{{ chart_year }}</div>
+<div id="chart_histogram">{{ chart_histogram }}</div>
