--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -71,7 +71,7 @@
                 'ajax_trigger': '1'
             },
             success: function (data) {
-                var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year'];
+                var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year', 'chart_histogram'];
                 reload_stats(data, blocks);
             }
         });
