forgotten change link for books index

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -61,7 +61,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/books/' in request.path %}active{% endif %}"
-              href="{% url 'books:books_list' %}">Knygos</a>
+              href="{% url 'books:books_index' %}">Knygos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/drinks/' in request.path %}active{% endif %}"
