--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -10,84 +10,75 @@
 
 {% block content %}
 
-{% url 'drinks:drinks_new' as url_drinks %}
-{% url 'drinks:drinks_target_new' as url_drinks_target %}
+<div class="row my-3">
+    <div class="col-2 text-left">
+        <a href="" class="btn btn-sm mx-2 {% if '/lists/' in request.path %}btn-info{% else %}btn-light{% endif %}">Duomenys</a>
+        <a href="" class="btn btn-sm {% if '/history/' in request.path %}btn-info{% else %}btn-light{% endif %}">Istorija</a>
+    </div>
+
+    <div class="col text-center" id="info_row"></div>
+
+    <div class="col-2 text-right">
+        {% url 'drinks:drinks_new' as url_drinks %}
+        {% url 'drinks:drinks_target_new' as url_drinks_target %}
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
+        <button type="button" class="btn btn-sm btn-info js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslas</button>
+    </div>
+</div>
+
+<div class="row mt-2">
+    <div class="col-lg-6" id="chart_consumsion">{{ chart_consumsion }}</div>
+    <div class="col-lg-6" id="chart_quantity">{{ chart_quantity }}</div>
+</div>
+
 <div class="row mt-2">
     <div class="col-lg-6">
         <div class="row">
-            <!-- target table -->
-            <div class="col-lg-12">
-                <!-- consumption chart -->
-                <div class="mb-3" id="chart_consumsion">{{ chart_consumsion }}</div>
+            <div id="tbl_consumsion" class="col-lg-3 pr-1">{{ tbl_consumsion }}</div>
+            <div id="tbl_last_day" class="col-lg-4 px-1">{{ tbl_last_day }}</div>
+            <div id="tbl_alcohol" class="col-lg-2 px-1">{{ tbl_alcohol }}</div>
+            <div id="drinks-target-content" class="col-lg-3 pl-1">{{ target_list }}</div>
+        </div>
 
-                <div class="row px-3">
-                    <div id="tbl_consumsion" class="col-lg-3 px-1">{{ tbl_consumsion }}</div>
-                    <div id="tbl_last_day" class="col-lg-4 px-1">{{ tbl_last_day }}</div>
-                    <div id="tbl_alcohol" class="col-lg-2 px-1">{{ tbl_alcohol }}</div>
-                    <div id="drinks-target-content" class="col-lg-3 px-1">{{ target_list }}</div>
-                </div>
-
-                <div class="row px-3">
-                    <div id="tbl_std_av" class="col-lg-12 px-1">{{ tbl_std_av }}</div>
-                </div>
-
-                <div class="row px-3">
-                    <div class="col-lg-12 px-1 pt-2">
-                        <div class="row">
-                            <div class="col-lg-3" style="font-size: .9rem;"><b>Istoriniai duomenys</b></div>
-                            <div class="col-lg-9 text-right">
-                                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 2 %}">2 metų</button>
-                                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 3 %}">3 metų</button>
-                                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 7 %}">7 metų</button>
-                                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' all_years %}">Visi metai</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row px-3">
-                    <div class="col-lg-12 px-1" id="historical_data"></div>
-                </div>
-
-                <div class="row px-3">
-                    <div class="col-lg-12 px-1 pt-5">
-                        <div class="row">
-                            <div class="col-lg-5" style="font-size: .9rem;"><b>Metų palyginimas</b></div>
-                            <div class="col-lg-7 text-right" id="compare_form_data">{{ compare_form }}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row px-3">
-                    <div class="col-lg-12 px-1" id="compare_data"></div>
-                </div>
-            </div>
+        <div class="row">
+            <div class="col-lg-12" id="tbl_std_av" class="col-lg-12 px-1">{{ tbl_std_av }}</div>
         </div>
     </div>
 
-    <div class="col-lg-4">
-        <div class="row">
-            <div class="col">
-                <div id="chart_quantity">{{ chart_quantity }}</div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col text-right my-4">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
-                <button type="button" class="btn btn-sm btn-info js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslas</button>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-2">
-        <div id="ajax-content">{{ drinks_list }}</div>
+    <div class="col-lg-6">
+        <div class="text-center px-5 mx-5 my-2"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
     </div>
 </div>
+
+<div class="row mt-2">
+    <div class="col-lg-6">
+        <div class="row">
+            <div class="col-lg-3" style="font-size: .9rem;"><b>Istoriniai duomenys</b></div>
+            <div class="col-lg-9 text-right">
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 2 %}">2 metų</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 3 %}">3 metų</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 7 %}">7 metų</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' all_years %}">Visi metai</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 px-1" id="historical_data"></div>
+        </div>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="row">
+            <div class="col-lg-5" style="font-size: .9rem;"><b>Metų palyginimas</b></div>
+            <div class="col-lg-7 text-right" id="compare_form_data">{{ compare_form }}</div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 px-1" id="compare_data"></div>
+        </div>
+    </div>
+</div>
+
 
 {% include 'modal.html' %}
 
