drinks chart vertical size == 300px

--- a/project/drinks/templates/drinks/includes/chart_consumsion_history.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_history.html
@@ -7,6 +7,9 @@
         }
     });
     Highcharts.chart('{{ chart_container_name }}', {
+        chart: {
+            height: '300px',
+        },
         title: {
             text: ''
         },
