--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -7,6 +7,9 @@
         }
     });
     Highcharts.chart('container-for-consumption', {
+        chart: {
+            height: '300px',
+        },
         title: {
             text: ''
         },
