--- a/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
@@ -4,6 +4,7 @@
        Highcharts.chart('container-for-quantity', {
         chart: {
             type: 'column',
+            height: '300px',
         },
         title: {
             text: ''
