--- a/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
@@ -1,7 +1,7 @@
-<div id="container-for-quantity"></div>
+<div id="chart_quantity_container"></div>
 <script>
     $(function () {
-       Highcharts.chart('container-for-quantity', {
+       Highcharts.chart('chart_quantity_container', {
         chart: {
             type: 'column',
             height: '300px',
