renamed file, renamed chart container

--- a/project/drinks/templates/drinks/includes/chart_history.html
+++ b/project/drinks/templates/drinks/includes/chart_history.html
@@ -1,4 +1,4 @@
-<div id="container-for-drinks-summary"></div>
+<div id="chart_history_container"></div>
 <script>
     Highcharts.setOptions({
         lang: {
@@ -6,7 +6,7 @@
             decimalPoint: ',',
         }
     });
-    Highcharts.chart('container-for-drinks-summary', {
+    Highcharts.chart('chart_history_container', {
         chart: {
             marginBottom: 67,
         },
