--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="row my-3">
-    <div class="col-2 text-left">
+    <div class="col-sm-3 text-left">
         <a href="{% url 'nights:nights_index' %}" class="btn btn-sm {% if '/nights/' == request.path %}btn-info{% else %}btn-light{% endif %}">Grafikai</a>
         <a href="{% url 'nights:nights_list' %}" class="btn btn-sm mx-2 {% if '/lists/' in request.path %}btn-info{% else %}btn-light{% endif %}">Duomenys</a>
         <a href="{% url 'nights:nights_history' %}" class="btn btn-sm {% if '/history/' in request.path %}btn-info{% else %}btn-light{% endif %}">Istorija</a>
@@ -21,7 +21,7 @@
         {% if tab == 'index' or tab == 'data' %}{{ info_row }}{% endif %}
     </div>
 
-    <div class="col-2 text-right">
+    <div class="col-sm-3 text-right">
         {% url 'nights:nights_new' as url_nights %}
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_nights }}"><i class="fas fa-plus"></i> Pridėti</button>
     </div>
