drinks column sizes

--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="row my-3">
-    <div class="col-2 text-left">
+    <div class="col text-left">
         <a href="{% url 'drinks:drinks_index' %}" class="btn btn-sm {% if '/drinks/' == request.path %}btn-info{% else %}btn-light{% endif %}">Grafikai</a>
         <a href="{% url 'drinks:drinks_list' %}" class="btn btn-sm mx-2 {% if '/lists/' in request.path %}btn-info{% else %}btn-light{% endif %}">Duomenys</a>
         <a href="{% url 'drinks:drinks_history' %}" class="btn btn-sm {% if '/history/' in request.path %}btn-info{% else %}btn-light{% endif %}">Istorija</a>
@@ -19,7 +19,7 @@
 
     <div class="col text-center" id="info_row"></div>
 
-    <div class="col-2 text-right">
+    <div class="col text-right">
         {% url 'drinks:drinks_new' as url_drinks %}
         {% url 'drinks:drinks_target_new' as url_drinks_target %}
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
@@ -35,15 +35,15 @@
 
 <div class="row mt-2">
     <div class="col-lg-6">
-        <div class="row">
-            <div id="tbl_consumsion" class="col-lg-3 pr-1">{{ tbl_consumsion }}</div>
+        <div class="row px-3">
+            <div id="tbl_consumsion" class="col-lg-3 px-1">{{ tbl_consumsion }}</div>
             <div id="tbl_last_day" class="col-lg-4 px-1">{{ tbl_last_day }}</div>
             <div id="tbl_alcohol" class="col-lg-2 px-1">{{ tbl_alcohol }}</div>
-            <div id="drinks-target-content" class="col-lg-3 pl-1">{{ target_list }}</div>
+            <div id="drinks-target-content" class="col-lg-3 px-1">{{ target_list }}</div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12" id="tbl_std_av" class="col-lg-12 px-1">{{ tbl_std_av }}</div>
+        <div class="row px-3">
+            <div class="col-lg-12 px-1" id="tbl_std_av">{{ tbl_std_av }}</div>
         </div>
     </div>
 
@@ -55,8 +55,8 @@
 <div class="row mt-2">
     <div class="col-lg-6">
         <div class="row cmp">
-            <div class="col-lg-3"><b>Istoriniai duomenys</b></div>
-            <div class="col-lg-9 text-right">
+            <div class="col-sm-3"><b>Istoriniai duomenys</b></div>
+            <div class="col-sm-9 text-right">
                 <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 2 %}">2 metų</button>
                 <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 3 %}">3 metų</button>
                 <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 7 %}">7 metų</button>
@@ -65,18 +65,18 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12 px-1" id="historical_data"></div>
+            <div class="col px-1" id="historical_data"></div>
         </div>
     </div>
 
     <div class="col-lg-6">
         <div class="row cmp">
-            <div class="col-lg-4"><b>Metų palyginimas</b></div>
-            <div class="col-lg-8 text-right" id="compare_form_data">{{ compare_form }}</div>
+            <div class="col-sm-4"><b>Metų palyginimas</b></div>
+            <div class="col-sm-8 text-right" id="compare_form_data">{{ compare_form }}</div>
         </div>
 
         <div class="row">
-            <div class="col-lg-12 px-1" id="compare_data"></div>
+            <div class="col px-1" id="compare_data"></div>
         </div>
     </div>
 </div>
