--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="row px-3">
-            <div class="col-lg-12 px-1" id="tbl_std_av">{{ tbl_std_av }}</div>
+            <div class="col px-1" id="tbl_std_av">{{ tbl_std_av }}</div>
         </div>
     </div>
 
