--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -84,7 +84,7 @@
 
 {% if tab == 'history' %}
 <div class="row mt-2">
-    <div class="col-lg-12">{% include 'drinks/includes/chart_history.html' %}</div>
+    <div class="col">{% include 'drinks/includes/chart_history.html' %}</div>
 </div>
 {% endif %}
 
