--- a/project/bookkeeping/templates/bookkeeping/includes/month_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/month_table.html
@@ -18,7 +18,7 @@
         {% with row.date|date:'w'|weekend:'_weekend_row' as weekend_row %}
         {% with row.date|date:'d' as day_int %}
         <tr id='row-{{ day_int }}' class="{% if day|slugify == row.date|date:'j' %}_current_day{% endif %} {{ weekend_row }}">
-            <td class="text-left {{ weekend_col }} panel-heading">
+            <td class="text-left {{ weekend_col }} panel-heading" nowrap>
                 <a class="row_click btn btn-super-sm" role="button" data-toggle="collapse" aria-expanded="true" data-url="{% url 'bookkeeping:month_day_list' row.date|date:"Ymd" %}" data-id="{{ day_int }}">{{ day_int }}</a>
             </td>
             {% for cat in expense_types %}
@@ -69,7 +69,9 @@
 
     table.stats td.panel-heading {
         padding: 0!important;
-        width: 2.3rem;
+        width: auto !important;
+        width: 2.3rem!important;
+        min-width: 2.3rem!important;
     }
 
     .panel-heading  a:before {
