--- a/project/nights/templates/nights/includes/nights_list.html
+++ b/project/nights/templates/nights/includes/nights_list.html
@@ -8,13 +8,13 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'nights:nights_update' item.id as url_update %}
+        {% url url_update item.id as url %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="3" class="row-spacer"></td>{% endif %}</tr>
         {% endifchanged %}
-        <tr data-url="{{ url_update }}" class="dblclick">
+        <tr data-url="{{ url }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.quantity }}</td>
-            <td class="text-center"><a type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
+            <td class="text-center"><a type="button" data-url="{{ url }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
