--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -9,16 +9,15 @@
 <div class="row mt-2">
     <div class="col-lg-8">
         <div class="row my-2">
-            <div class="col-lg-11">
+            <div class="col-sm-10">
             {% for m in buttons %}
                 {% with m|date:'n' as m_num %}
                 <button id="{{m_num}}" type="button" data-url="{% url 'expenses:expenses_month_list' m_num %}" class="btn btn-sm btn-month js-filter mr-1 {% if current_month|slugify == m_num %}btn-info{% endif %}">{{ m|date:'F'|title }}</button>
                 {% endwith %}
                 {% endfor %}
-                <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}"
-                    class="btn btn-sm btn-month js-filter ml-5">Visi įrašai</button>
+                <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ml-2">Visi įrašai</button>
             </div>
-            <div class="col-lg-1 text-right">
+            <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
             </div>
         </div>
