change paddings of rows/cols for mobile version

--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -6,8 +6,8 @@
 {% url 'expenses:expenses_new' as url_expense_new %}
 {% url 'expenses:expenses_type_new' as url_expenses_type_new %}
 {% url 'expenses:expenses_name_new' as url_expenses_name_new %}
-<div class="row mt-2">
-    <div class="col-lg-8">
+<div class="row mt-2 px-2">
+    <div class="col-lg-8 px-1">
         <div class="row my-2">
             <div class="col-sm-10">
             {% for m in buttons %}
@@ -24,16 +24,16 @@
         <div id="expenses_list">{{ expenses }}</div>
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-4 px-1">
         <div class="row my-2">
-            <div class="col-lg-12 text-right">
+            <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}"><i class="fas fa-plus"></i> Išlaidų rūšį</button>
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}"><i class="fas fa-plus"></i> Išlaidų pavadinimą</button>
             </div>
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col">{{ categories }}</div>
         </div>
     </div>
 </div>
