--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -8,8 +8,8 @@
 
 {% url 'incomes:incomes_new' as url_incomes %}
 {% url 'incomes:incomes_type_new' as url_incomes_type_new %}
-<div class="row mt-2">
-    <div class="col-lg-8">
+<div class="row mt-2 px-2">
+    <div class="col-lg-8 px-1">
         <div class="row my-2">
             <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes }}"><i class="fas fa-plus"></i> Pajamas</button>
@@ -17,7 +17,8 @@
         </div>
         <div id="ajax-content">{{ incomes }}</div>
     </div>
-    <div class="col-lg-4">
+
+    <div class="col-lg-4 px-1">
         <div class="row my-2">
             <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_type_new }}"><i class="fas fa-plus"></i> Pajamų rūšį</button>
@@ -25,7 +26,7 @@
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col">{{ categories }}</div>
         </div>
     </div>
 </div>
