--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -10,30 +10,30 @@
 {% url 'savings:savings_type_new' as url_savings_type_new %}
 {% url 'pensions:pensions_new' as url_pensions %}
 {% url 'pensions:pensions_type_new' as url_pensions_type_new %}
-<div class="row mt-2">
-    <div class="col-lg-8">
+<div class="row mt-2 px-2">
+    <div class="col-lg-8 px-1">
         <!-- Funds -->
         <div class="row mt-2">
-            <div class="col-lg-12 text-right">
+            <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content" class="col-lg-12">{{ savings }}</div>
+            <div id="ajax-content" class="col">{{ savings }}</div>
         </div><!-- End Funds -->
 
         <!-- Pensions -->
         <div class="row mt-2">
-            <div class="col-lg-12 text-right">
+            <div class="col text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
-            <div id="pension-content" class="col-lg-12">{{ pension }}</div>
+            <div id="pension-content" class="col">{{ pension }}</div>
         </div><!-- End Pensions -->
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-4 px-1">
         <!-- Funds Types -->
         <div class="row mt-2">
             <div class="col text-right">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col">{{ categories }}</div>
         </div>
         <!-- End Funds Types -->
 
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="pension-categories" class="col-lg-12 pl-0">{{ pension_type }}</div>
+            <div id="pension-categories" class="col">{{ pension_type }}</div>
         </div>
         <!-- End Pension Types -->
     </div>
