--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 
-<div class="row mt-2">
-    <div class="col-lg-8">
+<div class="row mt-2 px-2">
+    <div class="col-lg-8 px-1">
         <!-- transactins between accounts -->
         <div class="row mt-2">
             <div class="col-lg-10">
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="transactions_list" class="col-lg-12">{{ transactions }}</div>
+            <div id="transactions_list" class="col">{{ transactions }}</div>
         </div>
 
         <!-- close savings -->
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="savings_close_list" class="col-lg-12">{{ savings_close }}</div>
+            <div id="savings_close_list" class="col">{{ savings_close }}</div>
         </div>
 
         <!-- change savings -->
@@ -51,7 +51,7 @@
     </div>
 
     <!-- left side -->
-    <div class="col-lg-4">
+    <div class="col-lg-4 px-1">
         <div class="row mt-2">
             <div class="col text-right">
                 {% url 'accounts:accounts_new' as url_accounts %}
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col">{{ categories }}</div>
         </div>
     </div>
 </div>
