empty h6 tag for vertical aligment

--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -53,6 +53,9 @@
     <!-- left side -->
     <div class="col-lg-4 px-1">
         <div class="row mt-2">
+            <div class="col">
+                <h6>&nbsp;</h6>
+            </div>
             <div class="col text-right">
                 {% url 'accounts:accounts_new' as url_accounts %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="fas fa-plus"></i> Sąskaitą</button>
