--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -9,10 +9,10 @@
     <div class="col-lg-8 px-1">
         <!-- transactins between accounts -->
         <div class="row mt-2">
-            <div class="col-lg-10">
+            <div class="col">
                 <h6>Sąskaita &hArr; Sąskaita</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col text-right">
                 {% url 'transactions:transactions_new' as url_transactions %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
@@ -23,10 +23,10 @@
 
         <!-- close savings -->
         <div class="row mt-2">
-            <div class="col-lg-10">
+            <div class="col">
                 <h6>Fondas &rArr; Sąskaita</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col text-right">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
@@ -37,10 +37,10 @@
 
         <!-- change savings -->
         <div class="row mt-2">
-            <div class="col-lg-10">
+            <div class="col">
                 <h6>Fondas &hArr; Fondas</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col text-right">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
