--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -54,7 +54,7 @@
         padding: 0 .5rem;
     }
 
-    table.stats td.td_month_day_list {
+    table.stats td.td_expand_day_expenses {
         padding-top: .35rem!important;
         padding-left: .3rem!important;
         padding-right: .3rem!important;
