--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -21,7 +21,7 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
             </div>
         </div>
-        <div id="search">{{ search }}</div>
+        <div id="search_form_data">{{ search }}</div>
         <div id="expenses_list">{{ expenses }}</div>
     </div>
 
@@ -74,6 +74,45 @@
     $('.btn-month').on('click', function () {
         $('.btn-month').removeClass('btn-info');
         $(this).addClass('btn-info');
+    });
+
+    $(function () {
+        var search = function () {
+            var btn = $(this);
+            var url = btn.data('url');
+
+            if (url == undefined) {
+                return;
+            }
+
+            // This prevents the form from submitting
+            event.preventDefault();
+
+            // Capture form input
+            csrfmiddlewaretoken = $("#search_form").find("input[name='csrfmiddlewaretoken']").val();
+            form_data = $('#search_form').serializeArray();
+            form_data = JSON.stringify(form_data);
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                dataType: 'json',
+                type: "POST",
+                data: {
+                    "csrfmiddlewaretoken": csrfmiddlewaretoken,
+                    "form_data": form_data
+                },
+                success: function (data) {
+                    $('#expenses_list').html(data.html);
+                    $('#search_form_data').html(data.html_form);
+                },
+                error: function (xhr, status, error) {
+                    alert(`${error}\n\n${xhr.responseJSON.error}`)
+                }
+            });
+        };
+
+        $(document).on('click', '.search_click', search);
     });
 </script>
 {% endblock content %}
