--- a/project/expenses/templates/expenses/includes/search_form.html
+++ b/project/expenses/templates/expenses/includes/search_form.html
@@ -3,6 +3,6 @@
     {% csrf_token %}
     <div class="row mt-3">
         <div class="col mr-0 pr-0">{{ form.search|as_crispy_field }}</div>
-        <div class="col-sm-1 ml-0 pl-0 text-right"><input type="button" name="search" value="Search" class="btn btn-secondary btn-sm search_click" data-url="{% url 'expenses:expenses_search' %}"></div>
+        <div class="col-sm-1 ml-0 pl-0 text-right"><input type="submit" name="search" value="Search" class="btn btn-secondary btn-sm search_click" data-url="{% url 'expenses:expenses_search' %}"></div>
     </div>
 </form>
