--- a/project/expenses/templates/expenses/includes/search_form.html
+++ b/project/expenses/templates/expenses/includes/search_form.html
@@ -1,8 +1,19 @@
 {% load crispy_forms_tags %}
+
 <form novalidate method="post" id="search_form">
     {% csrf_token %}
-    <div class="row mt-3">
-        <div class="col mr-0 pr-0">{{ form.search|as_crispy_field }}</div>
-        <div class="col-sm-1 ml-0 pl-0 text-right"><input type="submit" name="search" value="Search" class="btn btn-secondary btn-sm search_click" data-url="{% url 'expenses:expenses_search' %}"></div>
+    <div class="form-row">
+        <div class="form-group col my-0 py-0">
+            {{ form.search|as_crispy_field }}
+        </div>
+        <div class="form-group col-auto">
+            <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-right my-auto" data-url="{% url 'expenses:expenses_search' %}">
+        </div>
     </div>
 </form>
+
+<style>
+    #search_btn {
+        margin-top: 0.05rem!important;
+    }
+</style>
