search form css

--- a/project/expenses/templates/expenses/includes/search_form.html
+++ b/project/expenses/templates/expenses/includes/search_form.html
@@ -15,5 +15,7 @@
 <style>
     #search_btn {
         margin-top: 0.05rem!important;
+        width: 3.65rem;
+        text-align: center!important;
     }
 </style>
