search form css

--- a/project/expenses/templates/expenses/includes/search_form.html
+++ b/project/expenses/templates/expenses/includes/search_form.html
@@ -14,7 +14,7 @@
 
 <style>
     #search_btn {
-        margin-top: 0.05rem!important;
+        padding: 0.25rem 0;
         width: 3.65rem;
         text-align: center!important;
     }
