--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -7,7 +7,7 @@
             {{ form.search|as_crispy_field }}
         </div>
         <div class="form-group col-auto">
-            <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-right my-auto" data-url="{% url 'expenses:expenses_search' %}">
+            <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-right my-auto" data-url="{{ url }}">
         </div>
     </div>
 </form>
