--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -12,7 +12,7 @@
     <div class="col-lg-8 px-1">
         <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
-            <div class="col auto text-right">
+            <div class="col-auto text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes }}"><i class="fas fa-plus"></i> Pajamas</button>
             </div>
         </div>
