--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -2,8 +2,8 @@
 
 <form novalidate method="post" id="search_form">
     {% csrf_token %}
-    <div class="form-row">
-        <div class="form-group col my-0 py-0">
+    <div class="form-row align-items-center">
+        <div class="form-group col">
             {{ form.search|as_crispy_field }}
         </div>
         <div class="form-group col-auto">
@@ -14,8 +14,21 @@
 
 <style>
     #search_btn {
-        padding: 0.25rem 0;
+        padding: 0.15rem;
         width: 3.65rem;
         text-align: center!important;
+    }
+
+    #search_form {
+        padding: 0 .15rem;
+    }
+
+    #search_form .form-group {
+        margin-bottom: 0!important;
+        padding: 0.15rem!important;
+    }
+
+    #div_id_search {
+        margin: 0!important;
     }
 </style>
