--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -21,7 +21,7 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
             </div>
         </div>
-        <div id="search_form_data" class="mt-3">{{ search }}</div>
+        <div id="search_form_data" class="mt-3 mb-2">{{ search }}</div>
         <div id="ajax-content">{{ expenses }}</div>
     </div>
 
