--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -11,7 +11,7 @@
 
 
 <div class="row my-3">
-    <div class="col-2 text-left"></div>
+    <div class="col-2 text-left">{{ search }}</div>
 
     <div class="col text-center" id="info_row">{{ info_row }}</div>
 
@@ -30,13 +30,8 @@
     <div class="col-lg-12" id="chart_readed_books">{{ chart_readed_books }}</div>
 </div>
 
-<div class="modal fade" id="modal-form">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content"></div>
-    </div>
-</div>
-
-
+{% include 'modal.html' %}
+<script type="text/javascript" src="{% static 'js/search.js' %}"></script>
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
         var url = `{% url 'books:reload_stats' %}`;
