--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -11,7 +11,7 @@
 
 
 <div class="row my-3">
-    <div class="col-2 text-left">{{ search }}</div>
+    <div class="col-2 text-left" id="search_form_data">{{ search }}</div>
 
     <div class="col text-center" id="info_row">{{ info_row }}</div>
 
