--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -10,10 +10,10 @@
 {% url 'incomes:incomes_type_new' as url_incomes_type_new %}
 <div class="row mt-2 px-2">
     <div class="col-lg-8 px-1">
-        <div class="row my-2 align-items-center mb-1">
+        <div class="row my-2 mb-1">
             <div class="col" id="search_form_data">{{ search }}</div>
             <div class="col-auto text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes }}"><i class="fas fa-plus"></i> Pajamas</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create mt-1" data-url="{{ url_incomes }}"><i class="fas fa-plus"></i> Pajamas</button>
             </div>
         </div>
         <div id="ajax-content">{{ incomes }}</div>
