change col sizes md -> lg

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -35,13 +35,13 @@
 
 <!-- accounts stats -->
 <div class="row mt-2">
-    <div id="accounts_worth" class="col-md-7">{{ accounts }}</div>
-    <div class="col-md-3">
+    <div id="accounts_worth" class="col-lg-7">{{ accounts }}</div>
+    <div class="col-lg-3">
         <div>{{ year_balance_short }}</div>
         <div id="no_incomes">{{ no_incomes }}</div>
     </div>
 
-    <div class="col-md-2">
+    <div class="col-lg-2">
         <!-- Average Incomes -->
         <div id="avg_incomes">{{ avg_incomes }}</div>
 
